--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   dio: ^5.4.3+1
   retrofit: ^4.1.1
   ionicons: ^0.2.2
-  logger: ^2.4.0   
+  logger: ^2.4.0
+  audioplayers: ^6.1.0
+ 
 
 
 
