--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ^3.5.3
@@ -44,6 +44,7 @@ dependencies:
   ionicons: ^0.2.2
   logger: ^2.4.0
   audioplayers: ^6.1.0
+  flutter_svg: ^2.0.10+1
  
 
 
@@ -51,6 +52,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,11 +62,7 @@ dev_dependencies:
   go_router_builder: ^2.1.1
   retrofit_generator: ^9.1.2
   json_serializable: ^6.7.1
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  carousel_slider: ^5.0.0
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
